final changes to hw9

--- a/HW9/AM207_HW9.ipynb
+++ b/HW9/AM207_HW9.ipynb
@@ -38,25 +38,29 @@
     "The data set consists of 50 samples from each of three species of Iris (Iris setosa, Iris virginica and Iris versicolor). Four features were measured from each sample: the length and the width of the sepals and petals, in centimeters. Based on the combination of these four features, you will build a model to predict\n",
     "the species. \n",
     "\n",
-    "For this problem only consider two classes: virginica and not-virginica. \n",
+    "For this problem only consider two classes: **virginica** and **not-virginica**. \n",
     "\n",
     "The iris data can be obtained [here](iris.txt).\n",
     "\n",
     "Lets $(X, Y )$ be our dataset, where $X=\\{\\vec{x}_1, \\ldots \\vec{x}_n\\}$ and $\\vec{x}_i$ is a 5D vector corresponding to an offset 1 and\n",
     "the four components explained above. $Y \\in \\{0,1\\}$ are the scalar \n",
     "labels of a class. In other words  \n",
-    "the species labels are your $Y$ data (say virginica = 0 and virginica=1), and the four features, petal length\n",
+    "the species labels are your $Y$ data (virginica = 0 and virginica=1), and the four features, petal length\n",
     "and width, sepal length and width, along with the offset, are your $X$ data. \n",
     "\n",
     "The goal is to train a classifier, that will predict an unknown class label $\\hat{y}$ from a new data point $x$. \n",
     "\n",
-    "Consider the following model (logistic model) for the probability of a class:\n",
+    "Consider the following glm (logistic model) for the probability of a class:\n",
     "\n",
-    "$$ Y \\sim \\frac{1}{1+e^{-X^T \\beta}} $$\n",
+    "$$ p(y) = \\frac{1}{1+e^{-x^T \\beta}} $$\n",
+    "\n",
+    "(or $logit(p) = x^T \\beta$ in more traditional glm form)\n",
     "\n",
     "where $\\beta$ is a 5D parameter to learn. \n",
     "\n",
-    "Use a 60-40 stratified (preserving class membership) split of the dataset into a training set and a test set."
+    "Then given $p$ at a particular data point $x$, we can use a bernoulli likelihood to get 1's and 0's. This should be enough for you to set up your model in pymc3. (Other Hints: also use theano.tensor.exp when you define the inerse logit to go from $\\beta$ to $p$, and you might want to set up $p$ as a deterministic explicitly so that pymc3 does the work of giving you the trace).\n",
+    "\n",
+    "Use a 60-40 stratified (preserving class membership) split of the dataset into a training set and a test set. ( See the docs for scikit-learn's `train_test_split`)."
    ]
   },
   {
@@ -65,10 +69,10 @@
    "source": [
     "## Part A: Sampling\n",
     "\n",
-    "1. Choose a prior for $\\beta \\sim N(0, \\sigma^2 I) $ and write down the formula for the normalized posterior $p(\\beta| Y,X)$. \n",
-    "2. Find the MAP estimate for the posterior on the training set.\n",
+    "1. Choose a prior for $\\beta \\sim N(0, \\sigma^2 I) $ and write down the formula for the normalized posterior $p(\\beta| Y,X)$. Since we dont care about regularization here, just use the mostly uninformative value $\\sigma = 10$.\n",
+    "2. Find the MAP and mean estimate for the posterior on the training set.\n",
     "3. Implement a  sampler to sample from this posterior of $\\beta$.   Generate samples of $\\beta$ and plot the sequence of $\\beta$'s  and histograms for each $\\beta$ component.\n",
-    "4. Use both the MAP estimate of $\\beta$ and the posterior distribution of $\\beta$ to generate a set of probabilities and a set of posterior distributions for each data point $x$ in the training set. Plot the posterior against the MAP estimate for 2 or 3 of your data points, preferably those with MAP estimates closer to 0.5."
+    "4. Use both the MAP and MEAN estimate of $\\beta$, and the posterior distribution of $\\beta$, to generate a set of probabilities and a set of posterior distributions respectively, for each data point $x$ in the training set. Plot the posterior against the MAP and MEAN estimate for 2 or 3 of your data points, preferably those with MAP estimates closer to 0.5."
    ]
   },
   {
@@ -77,7 +81,7 @@
    "source": [
     "---\n",
     "\n",
-    "Now that we have both a point estimate and a posterior distribution on the probability of a sample being virginica, we can use these to make predictions on both the training set and test set.\n",
+    "Now that we have both point estimate(s) and a posterior distribution on the probability of a data point being virginica, we can use these to make predictions on both the training set and test set.\n",
     "\n",
     "**There are two ways to make these predictions, given an estimate of $p(y=1 \\vert x)$ **: \n",
     "\n",
@@ -89,7 +93,7 @@
     "\n",
     "(A) You could just use the MAP value, ($p_{MAP}$), or the posterior mean ($p_{MEAN}$)\n",
     "\n",
-    "(B) You can see what fraction of your posterior samples have values above 0.5 (ie you are calculating 1-cdf(0.5) on the posterior ($p_{CDF}$)\n",
+    "(B) You can see what fraction of your posterior samples have values above 0.5 (ie you are calculating 1-cdf(0.5)) on the posterior ($p_{CDF}$))\n",
     "\n",
     "(C) Both these above methods miss the combined smearing of the posterior and sampling distributions. In other words they dont sample from the posterior predictive. If we draw a large number of samples from the posterior predictive distribution at a data point $x$, the fraction of 1s will give an estimate for the probability to use, $p_{PP}$, which is different from the MAP estimate, or the CDF estimate.\n",
     "\n",
@@ -138,7 +142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
