--- a/Long_HW3/Long_HW3.ipynb
+++ b/Long_HW3/Long_HW3.ipynb
@@ -83,19 +83,19 @@
     "The following schema illustrates the model of the raw data that is used to generate \"reviews_processed.csv\":\n",
     "<img src=\"restuarant_model.pdf\">\n",
     "\n",
-    "***Warning:*** *this is a \"real\" data science problem in the sense that the dataset in \"reviews_processed.csv\" is large. We understand that a number of you have limited computing resources, so you are encouraged but not required to use the entire dataset. If you wish you may use 10 rows from the dataset, as long as your choice of 10 contains a couple of restaurants with a large number of reviews and a couple with a small number of reviews.*\n",
+    "***Warning:*** *this is a \"real\" data science problem in the sense that the dataset in \"reviews_processed.csv\" is large. We understand that a number of you have limited computing resources, so you are encouraged but not required to use the entire dataset. If you wish you may use 10 restaurants from the dataset, as long as your choice of 10 contains a couple of restaurants with a large number of reviews and a couple with a small number of reviews.*\n",
     "\n",
     "### Part A: Modeling\n",
     "\n",
     "When the value in \"count\" is low, the \"mean\" value can be very skewed (refer to your answers for Problem #1 to see why this is a problem if we are interested in summarizing the reviewer's opinion on each aspect of a restaurant).\n",
     "\n",
-    "Following the SAT prep school example discussed in lab (and using your answers for Problem #1), set up a Bayesian model for a reviewer $i$'s opinion of restaurant $j$'s food and service, separately. That is, you will have a model for each restaurant and each aspect (food and serivce). For restaurant $j$, you will have a model for $\\{\\theta_{ij}^{\\text{food}}\\}$ and one for $\\{\\theta_{ij}^{\\text{service}}\\}$, where $\\theta_{ij}$ is the positivity of the opinion of the $i$-th reviewer regarding the $j$-th restaurant. \n",
+    "Following the [SAT prep school example discussed in lab](https://am207.github.io/2017/wiki/gelmanschoolstheory.html) (and using your answers for Problem #1), set up a Bayesian model for a reviewer $j$'s opinion of restaurant $k$'s food and service, separately. That is, you will have a model for each restaurant and each aspect (food and serivce). For restaurant $k$, you will have a model for $\\{\\theta_{jk}^{\\text{food}}\\}$ and one for $\\{\\theta_{jk}^{\\text{service}}\\}$, where $\\theta_{jk}$ is the positivity of the opinion of the $j$-th reviewer regarding the $k$-th restaurant. \n",
     "\n",
-    "**Hint:** what quantity in our data naturally corresponds to $\\bar{y}$'s in the prep school example? How would you calculate the parameter $\\sigma^2$ in the distribution of $\\bar{y}$ (note that $\\sigma^2$ is not provided explictly in the data?)\n",
+    "**Hint:** what quantity in our data naturally corresponds to $\\bar{y}_j$'s in the prep school example? How would you calculate the parameter $\\sigma_j^2$ in the distribution of $\\bar{y}_j$ (note that, contrary to the school example, $\\sigma_j^2$ is not provided explictly in the restaurant data)?\n",
     "\n",
     "### Part B: Analysis for Each restaurant\n",
     "\n",
-    "Use your model to produce estimates for $\\theta_{ij}$'s. Pick a few restaurants, for each aspect (\"food\" and \"service\") of each restaurant, plot your estimates for $\\theta$'s against the values in the \"mean\" column (corresponding to this restaurant. \n",
+    "Use your model to produce estimates for $\\theta_{jk}$'s. Pick a few restaurants, for each aspect (\"food\" and \"service\") of each restaurant, plot your estimates for the $\\theta$'s against the values in the \"mean\" column (corresponding to this restaurant. \n",
     "\n",
     "For the same restaurants, for each aspect, generate shrinkage plots as follows:\n",
     "\n",
@@ -109,13 +109,13 @@
     "\n",
     "Aggregate, in a simple but reasonable way, the reviewer's opinions to given a pair of overall scores for each restaurant, one for food and one for service. Rank the restaurants by food score and then by service score. Discuss the statistical weakness of ranking by these scores.\n",
     "\n",
-    "(**Hint:** what is problemmatic about the way you aggregated the reviews of each restaurant to produce an overall food or service score? You've see this question addressed a number of times in previous Homeworks.)\n",
+    "(**Hint:** what is statistically problemmatic about the way you aggregated the reviews of each restaurant to produce an overall food or service score? You've see this question addressed a number of times in previous homeworks, e.g. Homework #7 and Homework #6. This is also the same problem with summarizing a reviewer's opinion on a restaurants service and food based on what they write.)\n",
     "\n",
     "### Extra Credit:\n",
     "\n",
     "Propose a model, that addresses the weakness of your approach in Part C, for the overall quality of food and service for each restaurant given the $\\theta$'s. Combine your model for the overall quality with your model for the $\\theta$'s. Use this combined model to estimate the overall quality of food and service for each restaurant.\n",
     "\n",
-    "(**Hint:** Homework #7 might be a good reference for building your model for overall quality of food and service)\n"
+    "(**Hint:** Homework #7 is a good reference for building your model for the overall quality of food and service of these restaurants. Specifically, thinking about pooling.)\n"
    ]
   },
   {
