HW 10 2nd draft

--- a/HW10/AM207_HW10.ipynb
+++ b/HW10/AM207_HW10.ipynb
@@ -33,7 +33,9 @@
     "\n",
     "You will be investigate the effect of gender on a person's yearly income in the dataset. In particular, we want to know how a person's gender effect the likelihood of their yearly salary being above or below \\$50k.  \n",
     "\n",
-    "Following Example 10.1.3, build two models for the classification of an individual's yearly income (1 being above \\$50k and 0 being below), one of these models should include the effect of gender while the other should not. Replicate the analysis in 10.1.3 using your models; discuss the effect of gender on income.\n",
+    "Following Example 10.1.3, build two models for the classification of an individual's yearly income (1 being above \\$50k and 0 being below), one of these models should include the effect of gender while the other should not. \n",
+    "\n",
+    "Replicate the analysis in 10.1.3 using your models; specifically, make a plot like Figure 10.5 (posterior check) to see how well your models fits the data. Using your analysis, discuss the effect of gender on income.\n",
     "\n",
     "Following Example 10.1.3, build two models for the classification of an individual's yearly income taking into account education. The categories we wish to consider are: \n",
     "- 4 year college degree\n",
@@ -43,8 +45,20 @@
     "- Masters \n",
     "- Doctorate\n",
     "- Some or no high school\n",
-    "Note that you might have to combine some of the existing education categories in your dataframe. Replicate the analysis in 10.1.3 using your models; discuss the effect of gender on income, taking into account an individual's education."
+    "Note that you might have to combine some of the existing education categories in your dataframe. \n",
+    "\n",
+    "Replicate the analysis in 10.1.3 using your models; specifically, make a plot like Figure 10.6 (posterior check) to see how well your model fits the data. Using your analysis, discuss the effect of gender on income, taking into account an individual's education.\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
