--- a/HW10/AM207_HW10.ipynb
+++ b/HW10/AM207_HW10.ipynb
@@ -31,13 +31,9 @@
     "\n",
     "In this problem, you are given the data for the 1994 U.S. Census. The data has been processed so that only a subset of the features are present (for full dataset as well as the description see the [UCI Machine Learning Repository](http://archive.ics.uci.edu/ml/datasets/Census+Income)). \n",
     "\n",
-    "You will be investigate the effect of gender on a person's yearly income in the dataset. In particular, we want to know how a person's gender effect the likelihood of their yearly salary being above or below \\$50k.  \n",
+    "You will be investigate the effect of gender on a person's yearly income in the dataset. In particular, we want to know how a person's gender effect the likelihood of their yearly salary being above or below \\$50k. \n",
     "\n",
-    "Following Example 10.1.3, build two models for the classification of an individual's yearly income (1 being above \\$50k and 0 being below), one of these models should include the effect of gender while the other should not. \n",
-    "\n",
-    "Replicate the analysis in 10.1.3 using your models; specifically, make a plot like Figure 10.5 (posterior check) to see how well your models fits the data. Using your analysis, discuss the effect of gender on income.\n",
-    "\n",
-    "Following Example 10.1.3, build two models for the classification of an individual's yearly income taking into account education. The categories we wish to consider are: \n",
+    "First we want to aggregate the dataset by seven different categories. The categories we wish to consider are: \n",
     "- 4 year college degree\n",
     "- Some-college or two year academic college degree\n",
     "- High school\n",
@@ -45,10 +41,15 @@
     "- Masters \n",
     "- Doctorate\n",
     "- Some or no high school\n",
-    "Note that you might have to combine some of the existing education categories in your dataframe. \n",
+    "Note that you might have to combine some of the existing education categories in your dataframe. For each category, we suggest that you only keep track of a count of the number of males and females who make above (and resp. below) $50k (see the dataset in Example 10.1.3). \n",
     "\n",
-    "Replicate the analysis in 10.1.3 using your models; specifically, make a plot like Figure 10.6 (posterior check) to see how well your model fits the data. Using your analysis, discuss the effect of gender on income, taking into account an individual's education.\n",
-    "\n"
+    "Following Example 10.1.3, build two models for the classification of an individual's yearly income (1 being above \\$50k and 0 being below), one of these models should include the effect of gender while the other should not. \n",
+    "\n",
+    "Replicate the analysis in 10.1.3 using your models; specifically, make a plot like Figure 10.5 (posterior check) to see how well your models fits the data. Using your analysis, discuss the effect of gender on income.\n",
+    "\n",
+    "Following Example 10.1.3, build two models for the classification of an individual's yearly income taking into account education. \n",
+    "\n",
+    "Replicate the analysis in 10.1.3 using your models; specifically, make a plot like Figure 10.6 (posterior check) to see how well your model fits the data. Using your analysis, discuss the effect of gender on income, taking into account an individual's education."
    ]
   },
   {
