--- a/HW11/AM207_HW11_Solutions.ipynb
+++ b/HW11/AM207_HW11_Solutions.ipynb
@@ -67,7 +67,7 @@
     "**Hint:** You should already have the above from Homework #8.\n",
     "\n",
     "3. the Auxilary function, $Q(\\theta, \\theta^{(t-1)})$, or the expected complete data log likelihood, defined by\n",
-    "$$Q(\\theta, \\theta^{(t-1)}) = \\mathbb{E}_{Z | Y=y, \\Theta = \\theta^{t-1}}[\\text{the complete data log likelihood}]$$\n",
+    "$$Q(\\theta, \\theta^{(t-1)}) = \\mathbb{E}_{Z | Y, \\Theta^{t-1}}[\\text{the complete data log likelihood}]$$\n",
     "\n",
     "### Part B:\n",
     "We will maximize the likelihood through Expectation Maximization (EM). In order to preform EM, we must iterate through the following steps\n",
@@ -83,6 +83,50 @@
     "Estimate the MLE of $\\theta$ using EM. Explain the advantage of treating this problem like a latent variable model and using EM to compute the MLE (i.e. why not compute MLE directly by maximizing the likelihood?)\n",
     "\n",
     "Compare this value with the posterior mean estimate of $\\theta$ from Homework #8. In general, what is the difference between MLE and MAP or posterior mean estimates of model parameters? That is, name a couple of major pro's and con's of each type of estimate."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0.66568914956\n",
+      "1 0.631838674952\n",
+      "2 0.627485219761\n",
+      "3 0.626909582965\n",
+      "4 0.626833192939\n",
+      "5 0.626823050714\n",
+      "6 0.626821704055\n",
+      "7 0.626821525248\n",
+      "8 0.626821501506\n",
+      "9 0.626821498354\n",
+      "10 0.626821497935\n",
+      "0.626821497935\n"
+     ]
+    }
+   ],
+   "source": [
+    "conv_thresh = 1e-9\n",
+    "iters = 1000\n",
+    "diff = 1.\n",
+    "y = (125,18,20,34)\n",
+    "thetas = [1.]\n",
+    "i = 0\n",
+    "\n",
+    "while i < iters and diff > conv_thresh:\n",
+    "    theta = ((y[0] * thetas[-1])/(2 + thetas[-1]) + y[3])/((y[0] * thetas[-1])/(2 + thetas[-1]) + y[3] + y[2] + y[1])\n",
+    "    print i, theta\n",
+    "    i += 1\n",
+    "    diff = abs(theta - thetas[-1])\n",
+    "    thetas.append(theta)\n",
+    "    \n",
+    "print thetas[-1]"
    ]
   },
   {
