--- a/HW11/AM207_HW11.ipynb
+++ b/HW11/AM207_HW11.ipynb
@@ -64,7 +64,7 @@
     "1. the observed data log likelihood\n",
     "2. the complete data log likelihood\n",
     "\n",
-    "**Hint:** You should already have the above from Homework #8.\n",
+    "**Hint:** You should already have the observed data likelihood and the complete data likelihoodfrom Homework #8, you just need to take their logs for this problem.\n",
     "\n",
     "3. the Auxilary function, $Q(\\theta, \\theta^{(t-1)})$, or the expected complete data log likelihood, defined by\n",
     "$$Q(\\theta, \\theta^{(t-1)}) = \\mathbb{E}_{Z | Y=y, \\Theta = \\theta^{t-1}}[\\text{the complete data log likelihood}]$$\n",
