--- a/HW11/AM207_HW11.ipynb
+++ b/HW11/AM207_HW11.ipynb
@@ -56,23 +56,27 @@
     "\n",
     "***Note:*** Expectation Maximization can also be applied to compute the posterior mode (MAP) estimates. We are choosing not to do that in this homework so that you are not just repeating the task from Homework #8.\n",
     "\n",
-    "Parts A and B involve algebraic manipulations and no programming.\n",
     "\n",
     "### Part A:\n",
+    "\n",
     "Treat the augmented model as a latent variable model. Write down an expression (up to unimportant constants - you must decide what unimportant means) for each of the following:\n",
     "\n",
-    "1. the observed data log likelihood\n",
-    "2. the complete data log likelihood\n",
+    "(1) the observed data log likelihood\n",
     "\n",
-    "**Hint:** You should already have the observed data likelihood and the complete data likelihoodfrom Homework #8, you just need to take their logs for this problem.\n",
+    "(2) the complete(full) data log likelihood\n",
     "\n",
-    "3. the Auxilary function, $Q(\\theta, \\theta^{(t-1)})$, or the expected complete data log likelihood, defined by\n",
-    "$$Q(\\theta, \\theta^{(t-1)}) = \\mathbb{E}_{Z | Y=y, \\Theta = \\theta^{t-1}}[\\text{the complete data log likelihood}]$$\n",
+    "**Hint:** You should already have the observed data likelihood and the complete data likelihood from Homework #8, you just need to take their logs for this problem.\n",
+    "\n",
+    "(3) the Auxilary function, $Q(\\theta, \\theta^{(t-1)})$, or the expected complete(full) data log likelihood, defined by\n",
+    "$$Q(\\theta, \\theta^{(t-1)}) = \\mathbb{E}_{Z  \\vert  Y=y, \\Theta = \\theta^{t-1}}[\\text{the complete data log likelihood}]$$\n",
+    "\n",
+    "In other words $Z  \\vert  Y=y, \\Theta = \\theta^{t-1}$ is $q(z, \\theta_{old}$ from lecture at the end of the E-step and $Q$ is the z-posterior expectation (at $\\theta_{old}$) of the full data log likelihood, which is the ELBO minus the entropy of $q$ (which being evaluated at $\\theta_{old}$ is not dependent on $\\theta$ and thus irrelevant for maximization).\n",
     "\n",
     "### Part B:\n",
+    "\n",
     "We will maximize the likelihood through Expectation Maximization (EM). In order to preform EM, we must iterate through the following steps\n",
     "\n",
-    "- (Expectation) Compute the Auxilary function, $Q(\\theta, \\theta^{t-1})$\n",
+    "- (Expectation) Compute the Auxilary function, $Q(\\theta, \\theta^{t-1})$ (the expectation of the full data likelihood)\n",
     "- (Maximization) Compute $\\theta^{t} = \\text{argmax}_\\theta Q(\\theta, \\theta^{(t-1)})$\n",
     "\n",
     "Thus, you must compute exact formulae for the following:\n",
@@ -81,11 +85,23 @@
     "\n",
     "**Hint:** You don't actually need to do any difficult optimization for the M-step. After taking the expectation of the complete data log likelihood in the E-step, match your $Q(\\theta, \\theta^{(t-1)})$ to the log pdf of a familiar distribution, then use the known formula for the mode of this distribution to optimize $Q(\\theta, \\theta^{(t-1)})$.\n",
     "\n",
-    "### Part C:\n",
-    "Estimate the MLE of $\\theta$ using EM (choose your own reasonable criterion for convergence). Explain the advantage of treating this problem like a latent variable model and using EM to compute the MLE (i.e. why not compute MLE directly by maximizing the likelihood?)\n",
+    "Use these to **estimate the MLE** of $\\theta$ using EM (choose your own reasonable criterion for convergence).\n",
+    "\n",
+    "### To think but not to hand in\n",
+    "\n",
+    "Explain the advantage of treating this problem like a latent variable model and using EM to compute the MLE (i.e. why not compute MLE directly by maximizing the likelihood?)\n",
     "\n",
     "Compare this value with the posterior mean estimate of $\\theta$ from Homework #8. In general, what is the difference between MLE and MAP or posterior mean estimates of model parameters? That is, name a couple of major pro's and con's of each type of estimate."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -105,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
