--- a/HW11/AM207_HW11_Solutions.ipynb
+++ b/HW11/AM207_HW11_Solutions.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Problem 1: Homework #8 Revisited\n",
+    "#### Problem 1: Homework #8 Revisited\n",
     "\n",
     "Recall the context of Homework #8: \n",
     "\n",
@@ -56,33 +56,90 @@
     "\n",
     "***Note:*** Expectation Maximization can also be applied to compute the posterior mode (MAP) estimates. We are choosing not to do that in this homework so that you are not just repeating the task from Homework #8.\n",
     "\n",
-    "Parts A and B involve algebraic manipulations and no programming.\n",
     "\n",
     "### Part A:\n",
+    "\n",
     "Treat the augmented model as a latent variable model. Write down an expression (up to unimportant constants - you must decide what unimportant means) for each of the following:\n",
     "\n",
-    "1. the observed data log likelihood\n",
-    "2. the complete data log likelihood\n",
+    "(1) the observed data log likelihood\n",
     "\n",
-    "**Hint:** You should already have the above from Homework #8.\n",
+    "(2) the complete(full) data log likelihood\n",
     "\n",
-    "3. the Auxilary function, $Q(\\theta, \\theta^{(t-1)})$, or the expected complete data log likelihood, defined by\n",
-    "$$Q(\\theta, \\theta^{(t-1)}) = \\mathbb{E}_{Z | Y, \\Theta^{t-1}}[\\text{the complete data log likelihood}]$$\n",
+    "**Hint:** You should already have the observed data likelihood and the complete data likelihood from Homework #8, you just need to take their logs for this problem.\n",
+    "\n",
+    "(3) the Auxilary function, $Q(\\theta, \\theta^{(t-1)})$, or the expected complete(full) data log likelihood, defined by\n",
+    "$$Q(\\theta, \\theta^{(t-1)}) = \\mathbb{E}_{Z  \\vert  Y=y, \\Theta = \\theta^{t-1}}[\\text{the complete data log likelihood}]$$\n",
+    "\n",
+    "In other words $Z  \\vert  Y=y, \\Theta = \\theta^{t-1}$ is $q(z, \\theta_{old})$ at the end of the E-step from the EM lecture. The Auxilary function $Q$ is the ELBO minus the entropy of $q$ (which being evaluated at $\\theta_{old}$ is not dependent on $\\theta$ and thus irrelevant for maximization).\n",
     "\n",
     "### Part B:\n",
+    "\n",
     "We will maximize the likelihood through Expectation Maximization (EM). In order to preform EM, we must iterate through the following steps\n",
     "\n",
-    "- (Expectation) Compute the Auxilary function, $Q(\\theta, \\theta^{t-1})$\n",
+    "- (Expectation) Compute the Auxilary function, $Q(\\theta, \\theta^{t-1})$ (the expectation of the full data likelihood)\n",
     "- (Maximization) Compute $\\theta^{t} = \\text{argmax}_\\theta Q(\\theta, \\theta^{(t-1)})$\n",
     "\n",
     "Thus, you must compute exact formulae for the following:\n",
     "1. the Auxilary function, $Q(\\theta, \\theta^{(t-1)})$, for a given $\\theta^{(t-1)}$. That is, compute the expectation of the complete data log likelihood.\n",
     "2. $\\theta^{t}$, by maximizing the Auxilary function $Q(\\theta, \\theta^{(t-1)})$.\n",
     "\n",
-    "### Part C:\n",
-    "Estimate the MLE of $\\theta$ using EM. Explain the advantage of treating this problem like a latent variable model and using EM to compute the MLE (i.e. why not compute MLE directly by maximizing the likelihood?)\n",
+    "**Hint:** You don't actually need to do any difficult optimization for the M-step. After taking the expectation of the complete data log likelihood in the E-step, match your $Q(\\theta, \\theta^{(t-1)})$ to the log pdf of a familiar distribution, then use the known formula for the mode of this distribution to optimize $Q(\\theta, \\theta^{(t-1)})$.\n",
     "\n",
-    "Compare this value with the posterior mean estimate of $\\theta$ from Homework #8. In general, what is the difference between MLE and MAP or posterior mean estimates of model parameters? That is, name a couple of major pro's and con's of each type of estimate."
+    "Use these to **estimate the MLE** of $\\theta$ using EM (choose your own reasonable criterion for convergence).\n",
+    "\n",
+    "### Extra Credit:\n",
+    "\n",
+    "Explain the advantage of treating this problem like a latent variable model and using EM to compute the MLE (i.e. why not compute MLE directly by maximizing the likelihood?)\n",
+    "\n",
+    "Compare this value with the posterior mean estimate of $\\theta$ from Homework #8. In general, what is the difference between MLE and MAP or posterior mean estimates of model parameters? That is, name a couple of major pro's and con's of each type of estimate.\n",
+    "\n",
+    "\n",
+    "**Solution:**\n",
+    "Model:\n",
+    "\\begin{align}\n",
+    "z | y, \\theta &\\sim Bin\\left(y_1, \\frac{\\theta}{2 + \\theta}\\right)\\\\\n",
+    "y | \\theta & \\sim Mult\\left(197, \\left[\\frac{1}{2} + \\frac{\\theta}{4}, \\frac{1 - \\theta}{4}, \\frac{1 - \\theta}{4}, \\frac{\\theta}{4} \\right]\\right)\n",
+    "\\end{align}\n",
+    "\n",
+    "Observed:\n",
+    "$$\n",
+    "p(y | \\theta) = Mult\\left(y; 197, \\left[\\frac{1}{2} + \\frac{\\theta}{4}, \\frac{1 - \\theta}{4}, \\frac{1 - \\theta}{4}, \\frac{\\theta}{4} \\right]\\right)\n",
+    "$$\n",
+    "Complete:\n",
+    "$$\n",
+    "p(y, z | \\theta) = Bin\\left(z; y_1, \\frac{\\theta}{2 + \\theta}\\right)Mult\\left(y; 197, \\left[\\frac{1}{2} + \\frac{\\theta}{4}, \\frac{1 - \\theta}{4}, \\frac{1 - \\theta}{4}, \\frac{\\theta}{4} \\right]\\right)\n",
+    "$$\n",
+    "\n",
+    "Auxilary function \n",
+    "$$\n",
+    "Q(\\theta, \\theta^{t-1}) =& \\mathbb{E}_{z | y, \\theta}\\left[\\log p(y, z | \\theta) \\right] \n",
+    "$$\n",
+    "\n",
+    "For the E-step we're going to drop terms not involving $z$ or $\\theta$ since these will be constant in both the E and the M steps:\n",
+    "\\begin{align}\n",
+    "Q(\\theta, \\theta^{t-1}) =& \\mathbb{E}_{z | y, \\theta}\\left[\\log p(y, z | \\theta) \\right] \\\\\n",
+    "\\propto& \\mathbb{E}_{z | y, \\theta}\\left[ \\log \\left\\{\\binom{y_1}{z} \\left( \\frac{1}{2}\\right)^{y_1 - z} \\left( \\frac{\\theta}{4}\\right)^{z} (1 - \\theta)^{y_2 + y_3} \\theta^{y_4}\\right\\}\\right]\\\\\n",
+    "=& \\mathbb{E}_{z | y, \\theta}\\left[  \\log\\binom{y_1}{z} +  (y_1 - z)\\log\\frac{1}{2}  + z\\log \\frac{\\theta}{4} +  (y_2 + y_3) \\log (1 - \\theta) + y_4 \\log \\theta \\right]\\\\\n",
+    "=&  \\mathbb{E}_{z | y, \\theta}\\left[\\log\\binom{y_1}{z}\\right] +   \\mathbb{E}_{z | y, \\theta} \\left[(y_1 - z)\\log\\frac{1}{2}\\right]  + \\mathbb{E}_{z | y, \\theta} \\left[z\\log \\theta\\right] \\\\\n",
+    "& - \\mathbb{E}_{z | y, \\theta} \\log 4 +  \\mathbb{E}_{z | y, \\theta} \\left[(y_2 + y_3) \\log (1 - \\theta)\\right] + \\mathbb{E}_{z | y, \\theta}\\left[y_4 \\log \\theta\\right]\\\\\n",
+    "=&  \\mathbb{E}_{z | y, \\theta}\\left[\\log\\binom{y_1}{z}\\right] +  \\log\\frac{1}{2}  \\left[\\mathbb{E}_{z | y, \\theta} y_1 - \\mathbb{E}_{z | y, \\theta} z\\right]  + \\log \\theta\\mathbb{E}_{z | y, \\theta} z\\\\\n",
+    "& - \\mathbb{E}_{z | y, \\theta} \\log 4 +  \\mathbb{E}_{z | y, \\theta} \\left[(y_2 + y_3) \\log (1 - \\theta)\\right] + \\mathbb{E}_{z | y, \\theta}\\left[y_4 \\log \\theta\\right]\\\\\n",
+    "=&  F_1(z, \\theta^{t-1}) +  \\log\\frac{1}{2} \\left(y_1 - \\frac{y_1\\theta^{t-1}}{2 + \\theta^{t-1}}\\right)  + \\log \\theta\\frac{y_1\\theta^{t-1}}{2 + \\theta^{t-1}} - \\log 4 +  (y_2 + y_3) \\log (1 - \\theta) + y_4 \\log \\theta\\\\\n",
+    "=&  F_1(z, \\theta^{t-1}) +  F_2(z, \\theta^{t-1}) - \\log 4   +  (y_2 + y_3) \\log (1 - \\theta) + \\left(y_4  + \\frac{y_1\\theta^{t-1}}{2 + \\theta^{t-1}}\\right) \\theta\\\\\n",
+    "\\end{align}\n",
+    "\n",
+    "For the M step we maximize the above with respect to $\\theta$, and thus can drop any terms not involving $\\theta$:\n",
+    "\\begin{align}\n",
+    "\\text{argmax}_\\theta \\left[ F_1(z, \\theta^{t-1}) +  F_2(z, \\theta^{t-1}) - \\log 4   +  (y_2 + y_3) \\log (1 - \\theta) + \\left(y_4  + \\frac{y_1\\theta^{t-1}}{2 + \\theta^{t-1}}\\right) \\theta\\right] = \\text{argmax}_\\theta\\left[(y_2 + y_3) \\log (1 - \\theta) + \\left(y_4  + \\frac{y_1\\theta^{t-1}}{2 + \\theta^{t-1}}\\right) \\theta\\right]\n",
+    "\\end{align}\n",
+    "But the above looks like (up to a constant) the log likelihood of a binomial pdf, i.e. \n",
+    "\\begin{align}\n",
+    "\\text{argmax}_\\theta\\left[(y_2 + y_3) \\log (1 - \\theta) + \\left(y_4  + \\frac{y_1\\theta^{t-1}}{2 + \\theta^{t-1}}\\right) \\theta\\right] =  \\text{argmax}_\\theta \\log Binom\\left(B; A + B, \\theta  \\right)+ C\n",
+    "\\end{align}\n",
+    "where $A = y_2 + y_3$ and $B = y_4  + \\frac{y_1\\theta^{t-1}}{2 + \\theta^{t-1}}$. So $\\argmax_\\theta$ of the above is just taking the MLE of a binomial. But the MLE of this binomial is \n",
+    "$$\n",
+    "\\frac{B}{A + B} = \\frac{ y_4  + \\frac{y_1\\theta^{t-1}}{2 + \\theta^{t-1}}}{ y_2 + y_3 + y_4  + \\frac{y_1\\theta^{t-1}}{2 + \\theta^{t-1}}}\n",
+    "$$"
    ]
   },
   {
