HW11 TF solns v2

--- a/HW11/AM207_HW11_Solutions.ipynb
+++ b/HW11/AM207_HW11_Solutions.ipynb
@@ -112,7 +112,7 @@
     "\n",
     "Auxilary function \n",
     "$$\n",
-    "Q(\\theta, \\theta^{t-1}) =& \\mathbb{E}_{z | y, \\theta}\\left[\\log p(y, z | \\theta) \\right] \n",
+    "Q(\\theta, \\theta^{t-1}) = \\mathbb{E}_{z | y, \\theta}\\left[\\log p(y, z | \\theta) \\right] \n",
     "$$\n",
     "\n",
     "For the E-step we're going to drop terms not involving $z$ or $\\theta$ since these will be constant in both the E and the M steps:\n",
@@ -136,7 +136,7 @@
     "\\begin{align}\n",
     "\\text{argmax}_\\theta\\left[(y_2 + y_3) \\log (1 - \\theta) + \\left(y_4  + \\frac{y_1\\theta^{t-1}}{2 + \\theta^{t-1}}\\right) \\theta\\right] =  \\text{argmax}_\\theta \\log Binom\\left(B; A + B, \\theta  \\right)+ C\n",
     "\\end{align}\n",
-    "where $A = y_2 + y_3$ and $B = y_4  + \\frac{y_1\\theta^{t-1}}{2 + \\theta^{t-1}}$. So $\\argmax_\\theta$ of the above is just taking the MLE of a binomial. But the MLE of this binomial is \n",
+    "where $A = y_2 + y_3$ and $B = y_4  + \\frac{y_1\\theta^{t-1}}{2 + \\theta^{t-1}}$. So $\\text{argmax}_\\theta$ of the above is just taking the MLE of a binomial. But the MLE of this binomial is \n",
     "$$\n",
     "\\frac{B}{A + B} = \\frac{ y_4  + \\frac{y_1\\theta^{t-1}}{2 + \\theta^{t-1}}}{ y_2 + y_3 + y_4  + \\frac{y_1\\theta^{t-1}}{2 + \\theta^{t-1}}}\n",
     "$$"
