--- a/Final/Final Exam Problem.ipynb
+++ b/Final/Final Exam Problem.ipynb
@@ -84,8 +84,8 @@
     "\\end{array}\\right), \\quad k = 0, 1\\\\\n",
     "s_{ik} &\\sim U(0, 20), \\quad i = 0, 1, 2;\\quad k = 0, 1\\\\\n",
     "z_{i} &\\sim Cat([\\pi_{i0}, \\pi_{i1}])\\\\\n",
-    "\\pi_{i1} &= \\sigma(\\beta^T c_{i} + alpha)\\\\\n",
-    "\\pi_{i0} &= 1 - \\sigma(\\beta^T c_{i} + alpha)\\\\\n",
+    "\\pi_{i1} &= \\sigma(\\beta^T c_{i} + \\alpha)\\\\\n",
+    "\\pi_{i0} &= 1 - \\sigma(\\beta^T c_{i} + \\alpha)\\\\\n",
     "\\beta &\\sim \\mathcal{N}(0, 100)\\\\\n",
     "\\alpha &\\sim \\mathcal{N}(0, 100)\\\\\n",
     "\\end{align}\n",
@@ -103,6 +103,15 @@
     "\n",
     "regarding how new born biometric data cluster?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
