--- a/Final/Final Exam Problem.ipynb
+++ b/Final/Final Exam Problem.ipynb
@@ -97,11 +97,9 @@
     "\n",
     "### Extra Credit: Appropriateness of the Choice of K\n",
     "\n",
-    "Use model comparison criteria to determine the optimal choice of $k$ for our mixture model. Does the optimal value of $k$ you find support our hypothesis \n",
+    "Use model comparison criteria to determine the optimal choice of $k$ for our mixture model. Does the optimal value of $k$ you find support our initial hypothesis \n",
     "\n",
-    "> New born bimetric data \"naturally\" clusters into exactly two groups. One group will encompase the full term births and the other will encompase the preterm births.\n",
-    "\n",
-    "regarding how new born biometric data cluster?"
+    "> New born bimetric data \"naturally\" clusters into exactly two groups. One group will encompase the full term births and the other will encompase the preterm births.\n"
    ]
   },
   {
