--- a/Hierarchical_ANN_MNIST_v2_unsolved.ipynb
+++ b/Hierarchical_ANN_MNIST_v2_unsolved.ipynb
@@ -47,10 +47,7 @@
     "\n",
     "2. Just as in part A, predict on the test data. This time, plot the resulting confusion matrix to visualize the accuracy of your result.\n",
     "\n",
-    "3. You can now use the fact that we're in a Bayesian framework and explore uncertainty in your predictions. Compute the $\\chi^2$ statistic for the predictions and see how uniform the samples are. The more uniform, the higher our uncertainty. Plot histogrmas of the $\\chi^2$ statistic for those predictions that you got right with respect to the test set, and for those that you got wrong. What is your conclusion?\n",
-    "\n",
-    "\n",
-    "\n"
+    "3. You can now use the fact that we're in a Bayesian framework and explore uncertainty in your predictions. A $\\chi^2$ statistic is used to investigate whether distributions of categorical variables differ from one another (see http://math.hws.edu/javamath/ryan/ChiSquare.html). Use the $\\chi^2$ statistic to compare the distributions of predicted versus real classes for those predictions that you got right with respect to the test set, and for those that you got wrong. Plot a histogram of $\\chi^2$ statistics for both cases. What do you conclude in terms of the uncertainties of the predictions? Is the missclassification rate uniform across classes?"
    ]
   },
   {
