small changes to ANN problem part 3

--- a/Final/Final_Exam.ipynb
+++ b/Final/Final_Exam.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "Build an artificial neural network in pymc3 (or Stan, your choice) with two hidden layers and 25 neurons in each, and use it to classify the MNIST dataset. Use the $\\tanh$ function as the activation function, and initialize ALL the weights using using normal priors with $\\mu=0$ and two different values for $\\sigma = 0.03, 0.1$.\n",
     "\n",
-    "1. You could use a MCMC sampler such as NUTS to train your model. But this could be extremely slow as you add more layer or more units. Instead, use the PyMC3/Stan ADVI implementation to approximate the posteriors of the weights, and obtain the posterior means, standard deviations, and the evidence lower bound (ELBO), which is your objective function. Use mini-batch gradient descent for the optimization (a minibatch size of 500 is appropriate), and a todal of 50000 ADVI iterations.\n",
+    "1. You could use a MCMC sampler such as NUTS to train your model. But this will be extremely slow as you add more layer or more units. Instead, use the PyMC3/Stan ADVI implementation to approximate the posteriors of the weights, and obtain the posterior means, standard deviations, and the evidence lower bound (ELBO), which is your objective function. Use mini-batch gradient descent for the optimization (a minibatch size of 500 is appropriate), and a todal of 50000 ADVI iterations.\n",
     "\n",
     "2. Plot the objective function (ELBO) as a function of the iteration. Using the best fit from your training, predict on the test set by estimating posterior predictives for the classes in each case, and provide the accuracy of your classification. How does your accuracy compare for the two values of $\\sigma$? *Hint: if you need traces to perform inference, you can sample directly from the normal distribution that ADVI outputs*.\n",
     "\n",
@@ -49,11 +49,11 @@
     "### Part B: Hierarchical ANN\n",
     "The connection between the standard deviation of the weight prior to the strengh of the L2 penalization term leads to an interesting idea. In Part A we fixed $\\sigma=0.03, 0.1$, but this is a somehow arbitrary decision. Perhaps $\\sigma$ should be different for each layer, and have a different magnitude. Rather than randomly trying different $\\sigma$s, we can learn the best values directly from the data. This is when the ANN becomes hierarchical. \n",
     "\n",
-    "1. Modify your algorithm to include different hyperpriors for the $\\sigma$s for the bias and weights in each layer, and use ADVI again to optimize the model. Plot the posteriors distributions for the hyperpriors.\n",
+    "1. Modify your algorithm to include different hyperpriors for the $\\sigma$s for the bias and weights in each layer (you could use HalfNormals or HalfCauchys or other distributions appropriate for $\\sigma$s), and use ADVI again to optimize the model. Plot the posteriors distributions for the hyperparameters.\n",
     "\n",
     "2. Just as in part A, predict on the test data and report your accuracy.\n",
     "\n",
-    "3. You can now use the fact that we're in a Bayesian framework and explore uncertainty in your predictions. Compute the $\\chi^2$ statistic for the predictions and see how uniform the samples are. The more uniform, the higher our uncertainty. Plot histograms of the $\\chi^2$ statistic for those predictions that you got right with respect to the test set, and for those that you got wrong. What is your conclusion?"
+    "3. You can now use the fact that we're in a Bayesian framework and explore uncertainty in your predictions. A $\\chi^2$ statistic is used to investigate whether distributions of categorical variables differ from one another (see http://math.hws.edu/javamath/ryan/ChiSquare.html or https://onlinecourses.science.psu.edu/stat414/node/311). Use the $\\chi^2$ statistic to compare/contrast the distributions of predicted versus real classes for those predictions that you got right with respect to the test set, and for those that you got wrong (the blog post mentioned above has code for this). Plot a histogram of $\\chi^2$ statistics for both cases. What do you conclude in terms of the uncertainties of the predictions? Is the missclassification rate uniform across classes?"
    ]
   },
   {
@@ -196,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
